--- a/folio.html
+++ b/folio.html
@@ -99,12 +99,12 @@
   </div>
   </div>
 <button data-bs-toggle="collapse" data-bs-target="#readme">Next</button>
-<div id="readme" class="collapse">
+<div id="readhe" class="collapse">
  download the game and install it
 </div>
 <br><br><br>
 <button data-bs-toggle="collapse" data-bs-target="#readme">Read more</button>
-<div id="readme" class="collapse">
+<div id="readyou" class="collapse">
   These games can be found on different platforms where they can be downloaded or just played online.
   For more games,follow the link below.
   <a href="http://abc//games/more//games23/232/1/12">More games</a>
@@ -224,5 +224,6 @@
     <a href="abc@gmaim.com" class="text-body">Francis Musyoka</a>
   </div>
 </footer>
+</div>
 </body>
 </html>
